--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-	@apply bg-gray-950 text-white;
+@layer base {
+	html,
+	body {
+		@apply bg-gray-950 text-white;
+		font-family: Inter;
+	}
 }
